# hoverDeck

./: .gitignore  CLAUDE.md  PLAN.md  README.md  build-windows.bat  build.py  main.py  pyproject.toml  requirements-windows.txt  requirements.txt  run-windows.bat
.github/workflows/: release.yml
assets/fonts/: FONTS.md
assets/icons/: make_icon.py
docs/handoff/: EULA-template.md  distribution-plan.md  spike-review.md
docs/screenshots/: README.md
hoverdeck/: __init__.py  app.py  config.py
hoverdeck/core/: __init__.py  action_runner.py  ai_builder.py  context.py  macro_player.py  macro_recorder.py  models.py  script_catalog.py  vpn.py
hoverdeck/core/conditions/: __init__.py  base.py  file_exists.py  pixel_color.py  time_window.py  window_title.py
hoverdeck/core/steps/: __init__.py  base.py  condition.py  delay.py  key_macro.py  launch.py  run_macro.py  run_script.py  shell.py
hoverdeck/security/: __init__.py  pin.py  secret_store.py  vault.py
hoverdeck/storage/: __init__.py  deck_store.py  macro_store.py  settings_store.py
hoverdeck/ui/: __init__.py  ai_builder_panel.py  deck_button.py  deck_grid.py  edit_mode.py  overlay_window.py  pin_pad.py  screens.py  theme.py  tray.py
hoverdeck/ui/dialogs/: __init__.py  action_editor.py  button_editor.py  file_browser.py  macro_editor.py  script_manager.py  script_review.py  settings_dialog.py
hoverdeck/ui/widgets/: __init__.py  icon_picker.py  no_scroll.py  peek_button.py  rounded_frame.py  vpn_badge.py
hoverdeck/utils/: __init__.py  hotkeys.py  logging.py  win.py
installer/: hoverdeck.iss
tests/: test_action_runner.py  test_ai_builder.py  test_file_browser_model.py  test_icon.py  test_launch.py  test_macro.py  test_profiles.py  test_secret_store.py  test_steps_conditions.py  test_vault.py  test_vpn.py
